added pages with examples

--- a/assets/src/about.html
+++ b/assets/src/about.html
@@ -15,7 +15,7 @@
 		<section class="row">
 			<div class="col-12 col-md-9">
 				<div class="about_us px-1 px-md-5 block-bg-color">
-					<h1 class="text-center my-4 h3">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ «ТРАНСФОРМЪ»</h1>
+					<h1 class="text-center my-4">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ «ТРАНСФОРМЪ»</h1>
 					<div>
 						<p>Основным направлением деятельности нашего предприятия является производство архитектурных фасадных элементов из пенополистирола марки ПСБС-25Ф, армированного антищелочной стеклотканевой сеткой, с нанесением защитных покрытий.</p>
 
@@ -24,16 +24,17 @@
 						<p>Производимые нами изделия успешно применяются в качестве архитектурного декора как для фасадов зданий, так и для украшения парков, дизайна ландшафтов, интерьеров. Мы изготавливаем изделия практически любых форм и габаритов по каталогу, либо по индивидуальным чертежам.</p>
 
 						<p>Применяемые в производстве материалы имеют всю разрешительную нормативно-техническую документацию, включая одобрение Госстроя РФ.</p>
-
-						<p>Наши преимущества:</p>
-
-						<p>1. Мы работаем исключительно по технологии утепления фасадов зданий на территории всей России с совершенно разными климатическими воздействиями природных факторов на структуру изделий. А в эту технологию в обязательном порядке заложено армирование изделий антищелочной стеклосеткой. Стеклосетка несет важную роль при формировании качественных показателей готового изделия и его эксплуатационной долговечности.</p>
-
-						<p>2. Мы применяем клеевые составы только известных производителей, прошедших проверку временем (например, акриловое покрытие «ЛАЭС» применяется в РФ не менее 25 лет без каких-либо нареканий, а гарантия производителя на него – до 48 лет).</p>
-
-						<p>3. Мы не пытаемся изобрести свое личное покрытие, т.к. для его апробации необходимы испытания в современных лабораториях в течение весьма длительного времени (речь идет о годах).</p>
-
-						<p>4. К каждому заказчику мы подходим индивидуально. Изготавливая ему дизайн-проект, мы тщательно снимаем замеры с его объекта и при необходимости изготавливаем лекала на сложные участки. Каждое окно, каждый выступ и примыкание отображается на монтажной схеме. Заказчик чётко знает, что эти детали изготовлены на окно №1 или дверь №4 и т.п., они изготовлены уже нужного размера, подписаны с тыльной стороны и, при необходимости, «зарезаны» под угол прилегания, что облегчает стадию монтажа, а также существенно снижает затраты за счет снижения количества обрезков и времени монтажных работ.</p>
+						<p><strong>Наши преимущества:</strong></p>
+						<ol>
+							<li>Мы работаем исключительно по технологии утепления фасадов зданий на территории всей России с совершенно разными климатическими воздействиями природных факторов на структуру изделий. А в эту технологию в обязательном порядке заложено армирование изделий антищелочной стеклосеткой. Стеклосетка несет важную роль при формировании качественных показателей готового изделия и его эксплуатационной долговечности.
+							</li>
+							<li>Мы применяем клеевые составы только известных производителей, прошедших проверку временем (например, акриловое покрытие «ЛАЭС» применяется в РФ не менее 25 лет без каких-либо нареканий, а гарантия производителя на него – до 48 лет).
+							</li>
+							<li>Мы не пытаемся изобрести свое личное покрытие, т.к. для его апробации необходимы испытания в современных лабораториях в течение весьма длительного времени (речь идет о годах).
+							</li>
+							<li>К каждому заказчику мы подходим индивидуально. Изготавливая ему дизайн-проект, мы тщательно снимаем замеры с его объекта и при необходимости изготавливаем лекала на сложные участки. Каждое окно, каждый выступ и примыкание отображается на монтажной схеме. Заказчик чётко знает, что эти детали изготовлены на окно №1 или дверь №4 и т.п., они изготовлены уже нужного размера, подписаны с тыльной стороны и, при необходимости, «зарезаны» под угол прилегания, что облегчает стадию монтажа, а также существенно снижает затраты за счет снижения количества обрезков и времени монтажных работ.
+							</li>
+						</ol>
 
 						<p>Если все перечисленное убедило Вас в нашем преимуществе перед иными аналогичными компаниями, то мы будем рады нашему с Вами сотрудничеству!</p>
 					</div>
