--- a/assets/src/examples_of_balustrades.html
+++ b/assets/src/examples_of_balustrades.html
@@ -14,7 +14,27 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum sit recusandae, doloremque hic cum aspernatur ullam maxime excepturi quam possimus eos expedita aut nulla odit sed quidem, fuga modi.
+				<article class="wrapper example-2 block-bg-color mt-1 p-2">
+					<h3>Примеры балюстрад</h3>
+					<p>Все балюстрады выполнены из фасадного армированного пенополистирола на металлокаркасе. Конфигурация и габариты изделий могут быть любыми.</p>
+					<div class="row">
+						<div class="col-12 col-lg-6 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-6 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+					</div>
+				</article>
 			</div>
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
