--- a/assets/src/examples_of_our_artwork.html
+++ b/assets/src/examples_of_our_artwork.html
@@ -14,7 +14,131 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum sit recusandae, doloremque hic cum aspernatur ullam maxime excepturi quam possimus eos expedita aut nulla odit sed quidem, fuga modi.
+				<mail class="examples_of_our_artwork">
+					<article class="wrapper example-1 block-bg-color mt-1 p-2">
+						<h3>г.Краснодар, ул. Красная (здание «GRAND CAFE» вблизи кинотеатра «Аврора»).</h3>
+						<p>Вид работ: изготовление, монтаж, покраска архитектурных фасадных элементов из армированного пенополистирола на основе эскиза и проектных чертежей, предоставленных заказчиком. На фотографиях изображены фрагменты фасадов здания на стадии монтажа архитектурных элементов и после его завершения, а также проектный эскиз. grand1big grand2big grand7big </p>
+						<div class="row">
+							<div class="col-12 col-lg-3 my-1">
+								<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-3 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-3 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-3 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+						</div>
+					</article>
+					<article class="wrapper example-2 block-bg-color mt-1 p-2">
+						<h3>г.Славянск-на-Кубани</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut facere provident earum neque doloribus reprehenderit dolorum consectetur unde. Magnam laborum veritatis, quaerat ipsa explicabo nulla delectus dolorem libero dolores inventore.</p>
+						<div class="row">
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+						</div>
+					</article>
+					<article class="wrapper example-3 block-bg-color mt-1 p-2">
+						<h3>г.Краснодар. Частное домовладение «Зимний дворец»</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut facere provident earum neque doloribus reprehenderit dolorum consectetur unde. Magnam laborum veritatis, quaerat ipsa explicabo nulla delectus dolorem libero dolores inventore.</p>
+						<div class="row">
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+						</div>
+					</article>
+					<article class="wrapper example-3 block-bg-color mt-1 p-2">
+						<h3>г.Туапсе</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut facere provident earum neque doloribus reprehenderit dolorum consectetur unde. Magnam laborum veritatis, quaerat ipsa explicabo nulla delectus dolorem libero dolores inventore.</p>
+						<div class="row">
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+						</div>
+					</article>
+					<article class="wrapper example-5 block-bg-color mt-1 p-2">
+						<h3>г.Краснодар Оздоровительно-банный комплекс «Райский уголок». Калинина 86/1</h3>
+						<p>Вид работ:подготовка чертежей и возведение архитектурных сооружений по технологии несъемной фигурной опалубки из пенополистирола (несущая конструкция — металлокаркас)</p>
+						<div class="row">
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-6 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+							<div class="col-12 col-lg-4 my-1">
+									<img src="http://placehold.it/640x480" alt="">
+							</div>
+						</div>
+					</article>
+				</mail>
 			</div>
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
