--- a/assets/src/examples_of_promotional_products.html
+++ b/assets/src/examples_of_promotional_products.html
@@ -14,7 +14,27 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum sit recusandae, doloremque hic cum aspernatur ullam maxime excepturi quam possimus eos expedita aut nulla odit sed quidem, fuga modi.
+				<article class="wrapper example-2 block-bg-color mt-1 p-2">
+					<h3>Примеры негабаритных изделий рекламного назначения</h3>
+					<p>Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников — все это и многое другое мы готовы изготовить для Вас. Используемый в нашем производстве материал для реализации таких рекламных проектов — фасадный пенополистирол с защитным покрытием или без покрытия. Габариты изделий могут быть практически любыми.</p>
+					<div class="row">
+						<div class="col-12 col-lg-6 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-6 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+					</div>
+				</article>
 			</div>
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
