--- a/assets/src/examples_of_windows.html
+++ b/assets/src/examples_of_windows.html
@@ -14,7 +14,29 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum sit recusandae, doloremque hic cum aspernatur ullam maxime excepturi quam possimus eos expedita aut nulla odit sed quidem, fuga modi.
+				<article class="wrapper example-2 block-bg-color mt-1 p-2">
+					<h3>Примеры окон</h3>
+					<p>Обрамление оконных и дверных проемов — основа облика Вашего дома. Простые и строгие, пафосные и величественные архитектурные формы, работая на общую направленность индивидуального стиля, заставляют Ваш дом выглядеть дорого и роскошно, стильно и неординарно.
+
+Наша компания изготовит необходимые Вам архитектурные изделия, основываясь на <a href="#">каталоге</a>, или по индивидуальным эскизам, разработанным для Вас.</p>
+					<div class="row">
+						<div class="col-12 col-lg-6 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-6 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+						<div class="col-12 col-lg-4 my-1">
+							<img src="http://placehold.it/640x480" alt="">
+						</div>
+					</div>
+				</article>
 			</div>
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
