--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -52,7 +52,7 @@
 			</div>
 			<div class="col-12">
 				<div class="jumbotron block-bg-color text-color py-3 mb-2">
-					<h1 class="d-none d-md-block display-4 text-center">ФАБРИКА «ТРАНСФОРМЪ ПЛЮС»</h1>
+					<h1 class="d-none d-md-block display-4">ФАБРИКА «ТРАНСФОРМЪ ПЛЮС»</h1>
 					<p class="lead">Основным направлением деятельности нашего предприятия является производство архитектурных фасадных элементов.</p>
 					<hr class="my-2">
 					<p class="d-none">Производимые нами изделия успешно применяются в качестве архитектурного декора как для фасадов зданий, так и для украшения парков, дизайна ландшафтов, интерьеров. Мы изготавливаем изделия практически любых форм и габаритов по каталогу, либо по индивидуальным чертежам.</p>
