'start_refactoring_with_BEM'

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -77,7 +77,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-5">
 						<a href="">
-							<div class="card-02 mb-1 mb-md-2" id="#">
+							<div class="card card-02 mb-1 mb-md-2" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Балюстрады</h2>
 									<p class=" d-none d-md-block">Выполнены из фасадного армированного пенополистирола на металлокаркасе.</p>
