--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -67,7 +67,7 @@
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-7">
 						<a href="external_finish.html">
-							<div class="card-01 mb-1 mb-md-0" id="#">
+							<div class="card card--backgroundimg-01" id="#">
 								<div class="wrapper-blackout">
 									<h2>Внешняя отделка зданий</h2>
 									<p class=" d-none d-md-block">Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
@@ -77,7 +77,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-5">
 						<a href="">
-							<div class="card card-02 mb-1 mb-md-2" id="#">
+							<div class="card card--backgroundimg-02" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Балюстрады</h2>
 									<p class=" d-none d-md-block">Выполнены из фасадного армированного пенополистирола на металлокаркасе.</p>
@@ -85,7 +85,7 @@
 							</div>
 						</a>
 						<a href="using_materials.html">
-							<div class="card-03 mb-1 mb-md-0 block-bg-color" id="#">
+							<div class="card card--backgroundimg-03 block-bg-color" id="#">
 								<div class="wrapper-blackout">
 									<h2>Используемые материалы</h2>
 									<p class="">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
@@ -108,7 +108,7 @@
 					<div class="col-12 col-md-6 col-lg-5">
 
 						<a href="">
-							<div class="card-04 mb-1 mb-md-2" id="#">
+							<div class="card card--backgroundimg-04" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Внутреннее оформление помещений</h2>
 									<p class=" d-none d-md-block">Hоваторский способ внутренней отделки квартир, домов и офисов.</p>
@@ -116,7 +116,7 @@
 							</div>
 						</a>
 						<a href="">
-							<div class="card-05 mb-1 mb-md-0" id="#">
+							<div class="card card--backgroundimg-05" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Оконные и дверные проемы</h2>
 									<p class=" d-none d-md-block">Заставляют Ваш дом выглядеть дорого и роскошно, стильно и неординарно.</p>
@@ -126,7 +126,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-7">
 						<a href="">
-							<div class="card-06 mb-1 mb-md-0" id="#">
+							<div class="card card--backgroundimg-06" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Негабаритые изделия рекламного назначения</h2>
 									<p class="d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
