--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -68,7 +68,7 @@
 					<div class="col-12 col-md-6 col-lg-7">
 						<a href="external_finish.html">
 							<div class="card card--backgroundimg-01" id="#">
-								<div class="wrapper-blackout">
+								<div class="card__wrapper">
 									<h2>Внешняя отделка зданий</h2>
 									<p class=" d-none d-md-block">Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
 								</div>
@@ -78,7 +78,7 @@
 					<div class="col-12 col-md-6 col-lg-5">
 						<a href="">
 							<div class="card card--backgroundimg-02" id="#">
-								<div class="wrapper-blackout">
+								<div class="card__wrapper">
 									<h2 class="">Балюстрады</h2>
 									<p class=" d-none d-md-block">Выполнены из фасадного армированного пенополистирола на металлокаркасе.</p>
 								</div>
@@ -86,7 +86,7 @@
 						</a>
 						<a href="using_materials.html">
 							<div class="card card--backgroundimg-03 block-bg-color" id="#">
-								<div class="wrapper-blackout">
+								<div class="card__wrapper">
 									<h2>Используемые материалы</h2>
 									<p class="">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
 								</div>
@@ -109,7 +109,7 @@
 
 						<a href="">
 							<div class="card card--backgroundimg-04" id="#">
-								<div class="wrapper-blackout">
+								<div class="card__wrapper">
 									<h2 class="">Внутреннее оформление помещений</h2>
 									<p class=" d-none d-md-block">Hоваторский способ внутренней отделки квартир, домов и офисов.</p>
 								</div>
@@ -117,7 +117,7 @@
 						</a>
 						<a href="">
 							<div class="card card--backgroundimg-05" id="#">
-								<div class="wrapper-blackout">
+								<div class="card__wrapper">
 									<h2 class="">Оконные и дверные проемы</h2>
 									<p class=" d-none d-md-block">Заставляют Ваш дом выглядеть дорого и роскошно, стильно и неординарно.</p>
 								</div>
@@ -127,7 +127,7 @@
 					<div class="col-12 col-md-6 col-lg-7">
 						<a href="">
 							<div class="card card--backgroundimg-06" id="#">
-								<div class="wrapper-blackout">
+								<div class="card__wrapper">
 									<h2 class="">Негабаритые изделия рекламного назначения</h2>
 									<p class="d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
 								</div>
