--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -2,11 +2,9 @@
 <html lang="ru">
 
 <head>
-	<meta charset="UTF-8">
 	<title>Transform</title>
-	<link rel="stylesheet" href="css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alice|Ledger|Prata" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	//= template/head.html
 </head>
 
 <body>
