'BEM_refactoring_and_fonts_optimised'

--- a/assets/src/about.html
+++ b/assets/src/about.html
@@ -12,7 +12,7 @@
 		<section class="row">
 			<div class="col-12 col-md-9">
 				<div class="about_us px-1 px-md-5 block-bg-color">
-					<h1 class="text-center my-4">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ «ТРАНСФОРМЪ»</h1>
+					<h1 class="about_us__h1">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ «ТРАНСФОРМЪ»</h1>
 					<div>
 						<p>Основным направлением деятельности нашего предприятия является производство архитектурных фасадных элементов из пенополистирола марки ПСБС-25Ф, армированного антищелочной стеклотканевой сеткой, с нанесением защитных покрытий.</p>
 
