--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -11,7 +11,7 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-				<div class="contacts_and_map px-1 px-md-5 block-bg-color">
+				<div class="contacts_and_map">
 
 
 					<h1 class="mt-4">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ ТРАНСФОРМЪ ПЛЮС</h1>
@@ -22,7 +22,7 @@
 						<p class="my-4">Электронная почта: transform.krr@yandex.ru, transform.krr@gmail.com</p>
 						<p class="my-4">Режим работы: с понедельника по пятницу с 9-00 до 18-00 без перерыва, суббота и воскресенье — выходные</p>
 					</div>
-					<div class="yandex-map border mt-5" id="yandex-map">
+					<div class="yandex-map" id="yandex-map">
 						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A45abe471287bc213db7b8645f385c6f2646ba5320be25f8af88440d3ee506f96&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
 					</div>
 				</div>
