--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -14,10 +14,10 @@
 				<div class="contacts_and_map">
 
 
-					<h1 class="mt-4">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ ТРАНСФОРМЪ ПЛЮС</h1>
+					<h1 class="mt-1">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ ТРАНСФОРМЪ ПЛЮС</h1>
 					<div>
 						<p class="my-4">Адрес: 350004, г. Краснодар, ул. Кожевенная, д. 18</p>
-						<p class="my-4">Телефон/факс: (861) 298-08-98, (861) 298-08-80 </p>
+						<p class="my-4">Телефон/факс: +7 (861) 298-08-98, +7 (861) 298-08-80 </p>
 						<p class="my-4">Cотовый: +7 (918) 688-44-42</p>
 						<p class="my-4">Электронная почта: transform.krr@yandex.ru, transform.krr@gmail.com</p>
 						<p class="my-4">Режим работы: с понедельника по пятницу с 9-00 до 18-00 без перерыва, суббота и воскресенье — выходные</p>
