--- a/assets/src/using_materials.html
+++ b/assets/src/using_materials.html
@@ -11,25 +11,26 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-				<div class="about_materials mt-4 px-1 px-md-5 block-bg-color">
-				<h1>Используемые материалы</h1>
-					<p>Мы работаем на российском рынке исключительно с сертифицированными системами, т.е. все покрытия, которые мы используем для нанесения на пенопластовые изделия, имеют все возможные соответствующие документы для систем теплоизоляции фасадов, включая одобрение Госстроя РФ.</p>
+				<div class="about_materials mt-1 px-1 px-md-5 block-bg-color">
+					<h2>Используемые материалы</h2>
 
-					<p>Самым прочным и соответственно самым дорогим покрытием считается акриловый адгезионно-клеевой состав «ЛАЭС» (производство Самара, Россия, сополимеры и кварцевые наполнители – Нидерланды, США). Он имеет самые высокие технико-физические показатели, и его срок службы на Северном Кавказе – не менее 30 лет, в районах с более суровым зимним климатом (где меньше природных температурных перепадов) – не менее 48 лет.</p>
+					<h1>Фасадный пенопласт</h1>
+					<p>
+						Основным преимуществом пенопласта при использовании в качестве фрхитектурного декора является цена. Пенопласт который мы используем для изготовления архитектурных элементов и покрытия которые наносятся на пенопластовые изделия для придания им прочности и долговечности имеют все сертификационные документы включая одобрение Госстроя РФ.
 
-					<p>Несколько приближенным к эконом-варианту является другое используемое нами покрытие на основе сухих строительных смесей – Мурексин (производство Австрия, завод находится на территории России). Гарантийный срок службы изделий с таким покрытием – не менее 5-7 лет.</p>
+					</p>
+		
+					<h2>Фасадный пенополистерол</h2>
+					<p>
+						Экструдированный пенополистирол состоит из массы закрытых микроскопических ячеек наполненных внутри газом. По прочности он намного превосходит пенопласт. У пенопласта ячейки имеют микроскопические поры, через коротые вода и газ могут проникнуть внутрь. В противоположность этому ячейки пенополистирола выглядят сплошной массой и проникновение воду и воздуха возможно исключительно со стороны среза боковых поверхностей. Со стороны лыцевых поверхностей даже непокрытый ничем пенополистерол уже неплохо защищен от воздействия окружающей среды.
 
-					<p>Полным эконом-вариантом, предлагаемым нами, является покрытие на основе сухих строительных смесей – Баумит (производство Австрия, завод находится на территории России). Гарантийный срок службы изделий с таким покрытием – не менее 3 лет (по законодательству РФ).</p>
+						<h3>Декор из гипса</h3>
 
-					<p>Все вышеперечисленные покрытия наносятся на пенополистирольные изделия с обязательным использованием армирующей антищелочной стеклосетки с ячейками 5×5 мм и плотностью 90-160 г/кв.м. И только штучные изделия небольших размеров покрываются без армирующей стеклосетки клеем «ЛАЭС-декор», в составе которого есть армирующее стекловолокно. А на большие или погонажные изделия такой клей наносить строго не рекомендуется.</p>
+						<p>Фасадный декор произведенный из гипса используется уже на протяжении нескольких веков. Сегодня классические лепные элементы из гипса пользуются не меньшей популярностью.</p>
 
-					<p>Заказчик должен отчетливо осознавать, что отсутствие на изделиях армирующей стеклосетки придает им не только меньшую финансовую цену, но и реальные разрушительные риски при эксплуатации такого изделия. Поэтому при выборе производителя архитектурного декора нужно огромное внимание уделять технологии нанесения покрытий с явным предпочтением их армирования стеклосетками в целях долговечности.</p>
+						Ценители классического стиля в архитектуре признают преимущества декора из гипса, остающегося привлекательным, несмотря на большое количество новых суперсовременных материалов применяемых в отделке фасадов зданий.
+ Гипс используемый при производстве архитектурных элементов имеет высокую прочность и природную белизну, его так же называют формовочным или скульптурным. По консистенции гипс представляет из себя вяжущий порошок. После затвердевания он имеет плотную мелкоячеистую структуру. 
 
-					<p>В целях экономии средств заказчика мы можем предлагать ему некоторые комбинации покрытий, а также готовы предоставить качественную информацию по экономии при монтаже. Можем предложить изготовление деталей по принципу декора из камня – с технологическими швами.</p>
-
-					<p>Пожалуйста, помните, что цены на изделия, которые мы предварительно Вам озвучиваем, являются среднерозничными и неокончательными. Лишь когда мы с Вами совершенно точно обговариваем и устанавливаем перечень, размер, количество и степень сложности нужных Вам деталей, только тогда формируется окончательная цена. Мы всегда идем навстречу клиенту и предоставляем различные скидки в зависимости от объема заказанных деталей, от их сложности, а также от формы расчета – наличной или безналичной.</p>
-
-					<p>Не отказывайтесь от наших услуг, если речь касается только стоимости! Приходите, и мы найдем компромисс! Ибо за 9 лет работы в Краснодаре и других городах России нам есть, чем гордиться!</p>
 				</div>
 			</div>
 			<div class="d-none d-md-block col-md-3">
