--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -2,8 +2,9 @@
 <html lang="ru">
 
 <head>
-	<title>Transform</title>
+	<title>Трансформъ Плюс - фасадный и внутренний декор</title>
 	//= template/head.html
+	<meta name="description" content="Изготовление под заказ внутреннего и внешнего декора. Составление дизайн-проекта, изготовление на собственном высокотехнологичном оборудовании и монтаж. ">
 </head>
 
 <body>
@@ -17,25 +18,18 @@
 						<div class="carousel-item active">
 							<img class="d-block w-100" src="img/carousel-1.jpg" alt="First slide">
 							<div class="carousel-caption d-none d-md-block">
-								<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores vero architecto officia enim ipsum soluta, officiis, earum molestias assumenda expedita est. Illo, necessitatibus, itaque praesentium vel id est dicta animi!</h5>
+								<h5>Уникальный декор для внутренней отделки. Сделайте вашу квартиру неповторимой!</h5>
 								<p></p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" src="img/carousel-4.jpg" alt="Second slide">
+							<img class="d-block w-100" src="img/carousel-2.jpg" alt="Second slide">
 							<div class="carousel-caption d-none d-md-block">
-								<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi minus, tempore fugit quia itaque aliquam autem rerum distinctio debitis earum, consequatur amet nostrum. Perferendis vitae placeat cum nihil. Excepturi, impedit.</h5>
+								<h5>Индивидуальное оформление фасада - визитная карточка вашего дома</h5>
 								<p></p>
 							</div>
 						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100" src="img/carousel-3.jpg" alt="Third slide">
-							<div class="carousel-caption d-none d-md-block">
-								<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde illum magni voluptates rerum, dignissimos laboriosam iusto possimus sapiente. Laboriosam laudantium mollitia dolorem recusandae dolorum consequuntur voluptatum reiciendis quae officiis quam!</h5>
-								<p></p>
-							</div>
 
-						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 			    					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -66,7 +60,7 @@
 						<a href="external_finish.html">
 							<div class="card card--backgroundimg-01" id="#">
 								<div class="card__wrapper">
-									<h2>Внешняя отделка зданий</h2>
+									<h2>Фасадный декор для наружной отделки</h2>
 									<p class=" d-none d-md-block">Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
 								</div>
 							</div>
@@ -85,7 +79,7 @@
 							<div class="card card--backgroundimg-03 block-bg-color" id="#">
 								<div class="card__wrapper">
 									<h2>Используемые материалы</h2>
-									<p class="">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
+									<p class="">Мы используем пенополистерол, пенопласт и гипс. Почитайте об этом подробнее</p>
 								</div>
 							</div>
 						</a>
@@ -104,10 +98,10 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-5">
 
-						<a href="">
+						<a href="internal_finish.html">
 							<div class="card card--backgroundimg-04" id="#">
 								<div class="card__wrapper">
-									<h2 class="">Внутреннее оформление помещений</h2>
+									<h2 class="">Декор для внутренней отделки</h2>
 									<p class=" d-none d-md-block">Hоваторский способ внутренней отделки квартир, домов и офисов.</p>
 								</div>
 							</div>
