'add_yandex_metrika'

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -3,12 +3,14 @@
 
 <head>
 	<title>Трансформъ Плюс - фасадный и внутренний декор</title>
+	<meta name="yandex-verification" content="5f1cbaa3c6c34449" />
 	//= template/head.html
 	<meta name="description" content="Изготовление под заказ внутреннего и внешнего декора. Составление дизайн-проекта, изготовление на собственном высокотехнологичном оборудовании и монтаж. ">
 </head>
 
 <body>
 	<div class="container-fluid">
+	
 		//= template/header.html
 
 		<div class="row">
@@ -138,6 +140,7 @@
 		//= template/footer.html
 	</div>
 	<script src="js/main.js"></script>
+	//= template/yandexmetrika.html
 </body>
 
 </html>
