--- a/assets/src/using_materials.html
+++ b/assets/src/using_materials.html
@@ -19,7 +19,7 @@
 						Основным преимуществом пенопласта при использовании в качестве фрхитектурного декора является цена. Пенопласт который мы используем для изготовления архитектурных элементов и покрытия которые наносятся на пенопластовые изделия для придания им прочности и долговечности имеют все сертификационные документы включая одобрение Госстроя РФ.
 
 					</p>
-		
+
 					<h2>Фасадный пенополистерол</h2>
 					<p>
 						Экструдированный пенополистирол состоит из массы закрытых микроскопических ячеек наполненных внутри газом. По прочности он намного превосходит пенопласт. У пенопласта ячейки имеют микроскопические поры, через коротые вода и газ могут проникнуть внутрь. В противоположность этому ячейки пенополистирола выглядят сплошной массой и проникновение воду и воздуха возможно исключительно со стороны среза боковых поверхностей. Со стороны лыцевых поверхностей даже непокрытый ничем пенополистерол уже неплохо защищен от воздействия окружающей среды.
@@ -28,8 +28,7 @@
 
 						<p>Фасадный декор произведенный из гипса используется уже на протяжении нескольких веков. Сегодня классические лепные элементы из гипса пользуются не меньшей популярностью.</p>
 
-						Ценители классического стиля в архитектуре признают преимущества декора из гипса, остающегося привлекательным, несмотря на большое количество новых суперсовременных материалов применяемых в отделке фасадов зданий.
- Гипс используемый при производстве архитектурных элементов имеет высокую прочность и природную белизну, его так же называют формовочным или скульптурным. По консистенции гипс представляет из себя вяжущий порошок. После затвердевания он имеет плотную мелкоячеистую структуру. 
+						Ценители классического стиля в архитектуре признают преимущества декора из гипса, остающегося привлекательным, несмотря на большое количество новых суперсовременных материалов применяемых в отделке фасадов зданий. Гипс используемый при производстве архитектурных элементов имеет высокую прочность и природную белизну, его так же называют формовочным или скульптурным. По консистенции гипс представляет из себя вяжущий порошок. После затвердевания он имеет плотную мелкоячеистую структуру.
 
 				</div>
 			</div>
@@ -40,6 +39,7 @@
 		//= template/footer.html
 	</div>
 	<script src="js/main.js"></script>
+		//= template/yandexmetrika.html
 </body>
 
 </html>
