'validation_html_finished'

--- a/assets/src/examples_of_our_artwork.html
+++ b/assets/src/examples_of_our_artwork.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container-fluid">
 		//= template/header.html
-		<section class="row">
+		<div class="row">
 			<div class="col-12 col-md-9">
-				<mail class="examples_of_our_artwork">
+				<main class="examples_of_our_artwork">
 					<article class="wrapper example-1 block-bg-color mt-1 p-2">
 						<h3>г.Краснодар, ул. Красная (здание «GRAND CAFE» вблизи кинотеатра «Аврора»).</h3>
 						<p>Вид работ: изготовление, монтаж, покраска архитектурных фасадных элементов из армированного пенополистирола на основе эскиза и проектных чертежей, предоставленных заказчиком. На фотографиях изображены фрагменты фасадов здания на стадии монтажа архитектурных элементов и после его завершения, а также проектный эскиз. grand1big grand2big grand7big </p>
@@ -134,12 +134,12 @@
 							</div>
 						</div>
 					</article>
-				</mail>
+				</main>
 			</div>
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
 			</div>
-		</section>
+		</div>
 		//= template/footer.html
 	</div>
 	<script src="js/main.js"></script>
