--- a/assets/src/examples_of_windows.html
+++ b/assets/src/examples_of_windows.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container-fluid">
 		//= template/header.html
-		<section class="row">
+		<div class="row">
 			<div class="col-12 col-md-9">
 				<article class="wrapper example-2 block-bg-color mt-1 p-2">
 					<h3>Примеры окон</h3>
@@ -38,7 +38,7 @@
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
 			</div>
-		</section>
+		</div>
 		//= template/footer.html
 	</div>
 	<script src="js/main.js"></script>
