--- a/assets/src/external_finish.html
+++ b/assets/src/external_finish.html
@@ -10,7 +10,7 @@
 	<div class="container-fluid">
 		//= template/header.html
 
-		<section class="row">
+		<div class="row">
 			<main class="col-12 col-md-9">
 				<div class="external_finished">
 					<section class="external_finished__description">
@@ -34,7 +34,7 @@
 					<div class="row">
 						<div class="col-12 col-md-4">
 							<a href="pdf/Часть-1-Карнизы-межэтажные-пояса.pdf">
-								<div class="card-ex card-ex-01" id="#">
+								<div class="card-ex card-ex-01">
 									<div class="wrapper-blackout">
 										<h5>Карнизы, межэтажные пояса</h5>
 
@@ -45,7 +45,7 @@
 						</div>
 						<div class="col-12 col-md-4">
 							<a href="pdf/Часть-2.-Наличники.-подоконники.pdf">
-								<div class="card-ex card-ex-02" id="#">
+								<div class="card-ex card-ex-02">
 									<div class="wrapper-blackout">
 										<h5>Наличники. подоконники</h5>
 
@@ -55,7 +55,7 @@
 						</div>
 						<div class="col-12 col-md-4">
 							<a href="pdf/Часть-3.-Камни-замковые-камни-рустовые-кронштейны.-триглифы.pdf">
-								<div class="card-ex card-ex-03" id="#">
+								<div class="card-ex card-ex-03">
 									<div class="wrapper-blackout">
 										<h5>Камни замковые, камни рустовые, кронштейны. триглифы</h5>
 
@@ -65,7 +65,7 @@
 						</div>
 						<div class="col-12 col-md-3">
 							<a href="pdf/Часть-4.-Тимпаны-филенки-розетки.pdf">
-								<div class="card-ex card-ex-04" id="#">
+								<div class="card-ex card-ex-04">
 									<div class="wrapper-blackout">
 										<h5>Тимпаны, филенки, розетки</h5>
 
@@ -75,7 +75,7 @@
 						</div>
 						<div class="col-12 col-md-3">
 							<a href="pdf/Часть-5.-Колонны-полуколонны-тела-капители-базы.pdf">
-								<div class="card-ex card-ex-05" id="#">
+								<div class="card-ex card-ex-05">
 									<div class="wrapper-blackout">
 										<h5>Колонны, полуколонны (тела, капители, базы)</h5>
 
@@ -85,7 +85,7 @@
 						</div>
 						<div class="col-12 col-md-3">
 							<a href="pdf/Часть-6.-Пилястры-тела-капители-базы.pdf">
-								<div class="card-ex card-ex-06" id="#">
+								<div class="card-ex card-ex-06">
 									<div class="wrapper-blackout">
 										<h5>Пилястры ( тела, капители, базы)</h5>
 
@@ -95,7 +95,7 @@
 						</div>
 						<div class="col-12 col-md-3">
 							<a href="pdf/Часть-7.-Балясины-полубалясины-навершия.pdf">
-								<div class="card-ex card-ex-07" id="#">
+								<div class="card-ex card-ex-07">
 									<div class="wrapper-blackout">
 										<h5>Балясины, полубалясины, навершия</h5>
 
@@ -105,7 +105,7 @@
 						</div>
 						<div class="col-12 col-md-4">
 							<a href="pdf/Часть-8.-Крышки-на-столбы-и-парапетные.pdf">
-								<div class="card-ex card-ex-08" id="#">
+								<div class="card-ex card-ex-08">
 									<div class="wrapper-blackout">
 										<h5>Крышки на столбы и парапетные</h5>
 
@@ -115,7 +115,7 @@
 						</div>
 						<div class="col-12 col-md-4">
 							<a href="pdf/Часть-9.-Негабаритное.Цифрыбуквы-логотипымакеты.pdf">
-								<div class="card-ex card-ex-09" id="#">
+								<div class="card-ex card-ex-09">
 									<div class="wrapper-blackout">
 										<h5>Негабаритное. Цифры,буквы, логотипы,макеты</h5>
 
@@ -125,7 +125,7 @@
 						</div>
 						<div class="col-12 col-md-4">
 							<a href="pdf/Часть-10.-Стеновые-панели-панно.pdf">
-								<div class="card-ex card-ex-10" id="#">
+								<div class="card-ex card-ex-10">
 									<div class="wrapper-blackout">
 										<h5>Стеновые панели, панно</h5>
 
@@ -139,7 +139,7 @@
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
 			</div>
-		</section>
+		</div>
 
 		//= template/footer.html
 	</div>
