--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -23,7 +23,7 @@
 						<p class="my-4">Режим работы: с понедельника по пятницу с 9-00 до 18-00 без перерыва, суббота и воскресенье — выходные</p>
 					</div>
 					<div class="yandex-map" id="yandex-map">
-						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A45abe471287bc213db7b8645f385c6f2646ba5320be25f8af88440d3ee506f96&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
+						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A45abe471287bc213db7b8645f385c6f2646ba5320be25f8af88440d3ee506f96&amp;source=constructor" height="400"></iframe>
 					</div>
 				</div>
 			</div>
