--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -5,7 +5,7 @@
 	<title>Трансформъ Плюс - фасадный и внутренний декор</title>
 	<meta name="yandex-verification" content="5f1cbaa3c6c34449" />
 	//= template/head.html
-	<meta name="description" content="Изготовление под заказ внутреннего и внешнего декора. Составление дизайн-проекта, изготовление на собственном высокотехнологичном оборудовании и монтаж. ">
+	<meta name="description" content="Изготовление под заказ внутреннего и внешнего декора. Составление дизайн-проекта, изготовление на собственном высокотехнологичном оборудовании и монтаж.">
 </head>
 
 <body>
@@ -60,7 +60,7 @@
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-7">
 						<a href="external_finish.html">
-							<div class="card card--backgroundimg-01" id="#">
+							<div class="card card--backgroundimg-01">
 								<div class="card__wrapper">
 									<h2>Фасадный декор для наружной отделки</h2>
 									<p class=" d-none d-md-block">Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
@@ -70,7 +70,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-5">
 						<a href="">
-							<div class="card card--backgroundimg-02" id="#">
+							<div class="card card--backgroundimg-02">
 								<div class="card__wrapper">
 									<h2 class="">Балюстрады</h2>
 									<p class=" d-none d-md-block">Выполнены из фасадного армированного пенополистирола на металлокаркасе.</p>
@@ -78,7 +78,7 @@
 							</div>
 						</a>
 						<a href="using_materials.html">
-							<div class="card card--backgroundimg-03 block-bg-color" id="#">
+							<div class="card card--backgroundimg-03 block-bg-color">
 								<div class="card__wrapper">
 									<h2>Используемые материалы</h2>
 									<p class="">Мы используем пенополистерол, пенопласт и гипс. Почитайте об этом подробнее</p>
@@ -101,7 +101,7 @@
 					<div class="col-12 col-md-6 col-lg-5">
 
 						<a href="internal_finish.html">
-							<div class="card card--backgroundimg-04" id="#">
+							<div class="card card--backgroundimg-04">
 								<div class="card__wrapper">
 									<h2 class="">Декор для внутренней отделки</h2>
 									<p class=" d-none d-md-block">Hоваторский способ внутренней отделки квартир, домов и офисов.</p>
@@ -109,7 +109,7 @@
 							</div>
 						</a>
 						<a href="">
-							<div class="card card--backgroundimg-05" id="#">
+							<div class="card card--backgroundimg-05">
 								<div class="card__wrapper">
 									<h2 class="">Оконные и дверные проемы</h2>
 									<p class=" d-none d-md-block">Заставляют Ваш дом выглядеть дорого и роскошно, стильно и неординарно.</p>
@@ -119,7 +119,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-7">
 						<a href="">
-							<div class="card card--backgroundimg-06" id="#">
+							<div class="card card--backgroundimg-06">
 								<div class="card__wrapper">
 									<h2 class="">Негабаритые изделия рекламного назначения</h2>
 									<p class="d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
