--- a/assets/src/using_materials.html
+++ b/assets/src/using_materials.html
@@ -21,14 +21,14 @@
 					</p>
 
 					<h2>Фасадный пенополистерол</h2>
-					<p>
-						Экструдированный пенополистирол состоит из массы закрытых микроскопических ячеек наполненных внутри газом. По прочности он намного превосходит пенопласт. У пенопласта ячейки имеют микроскопические поры, через коротые вода и газ могут проникнуть внутрь. В противоположность этому ячейки пенополистирола выглядят сплошной массой и проникновение воду и воздуха возможно исключительно со стороны среза боковых поверхностей. Со стороны лыцевых поверхностей даже непокрытый ничем пенополистерол уже неплохо защищен от воздействия окружающей среды.
+					
+						<p>Экструдированный пенополистирол состоит из массы закрытых микроскопических ячеек наполненных внутри газом. По прочности он намного превосходит пенопласт. У пенопласта ячейки имеют микроскопические поры, через коротые вода и газ могут проникнуть внутрь. В противоположность этому ячейки пенополистирола выглядят сплошной массой и проникновение воду и воздуха возможно исключительно со стороны среза боковых поверхностей. Со стороны лыцевых поверхностей даже непокрытый ничем пенополистерол уже неплохо защищен от воздействия окружающей среды.</p>
 
 						<h3>Декор из гипса</h3>
 
 						<p>Фасадный декор произведенный из гипса используется уже на протяжении нескольких веков. Сегодня классические лепные элементы из гипса пользуются не меньшей популярностью.</p>
 
-						Ценители классического стиля в архитектуре признают преимущества декора из гипса, остающегося привлекательным, несмотря на большое количество новых суперсовременных материалов применяемых в отделке фасадов зданий. Гипс используемый при производстве архитектурных элементов имеет высокую прочность и природную белизну, его так же называют формовочным или скульптурным. По консистенции гипс представляет из себя вяжущий порошок. После затвердевания он имеет плотную мелкоячеистую структуру.
+						<p>Ценители классического стиля в архитектуре признают преимущества декора из гипса, остающегося привлекательным, несмотря на большое количество новых суперсовременных материалов применяемых в отделке фасадов зданий. Гипс используемый при производстве архитектурных элементов имеет высокую прочность и природную белизну, его так же называют формовочным или скульптурным. По консистенции гипс представляет из себя вяжущий порошок. После затвердевания он имеет плотную мелкоячеистую структуру.</p>
 
 				</div>
 			</div>
