--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -50,7 +50,7 @@
 					<hr class="my-2">
 					<p class="d-none">Производимые нами изделия успешно применяются в качестве архитектурного декора как для фасадов зданий, так и для украшения парков, дизайна ландшафтов, интерьеров. Мы изготавливаем изделия практически любых форм и габаритов по каталогу, либо по индивидуальным чертежам.</p>
 					<p class="lead">
-						<a class="btn sec-bg text-color btn-lg" href="about.html" role="button">Подробнее о нас</a>
+						<a class="btn sec-bg text-color btn-lg" href="about" role="button">Подробнее о нас</a>
 					</p>
 				</div>
 			</div>
@@ -59,7 +59,7 @@
 			<div class="col-12 col-md-9 col-lg-9">
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-7">
-						<a href="external_finish.html">
+						<a href="external_finish">
 							<div class="card card--backgroundimg-01">
 								<div class="card__wrapper">
 									<h2>Фасадный декор для наружной отделки</h2>
@@ -77,7 +77,7 @@
 								</div>
 							</div>
 						</a>
-						<a href="using_materials.html">
+						<a href="using-materials">
 							<div class="card card--backgroundimg-03 block-bg-color">
 								<div class="card__wrapper">
 									<h2>Используемые материалы</h2>
@@ -100,7 +100,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-5">
 
-						<a href="internal_finish.html">
+						<a href="internal-finish">
 							<div class="card card--backgroundimg-04">
 								<div class="card__wrapper">
 									<h2 class="">Декор для внутренней отделки</h2>
