--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -59,7 +59,7 @@
 			<div class="col-12 col-md-9 col-lg-9">
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-7">
-						<a href="external_finish">
+						<a href="external-finish">
 							<div class="card card--backgroundimg-01">
 								<div class="card__wrapper">
 									<h2>Фасадный декор для наружной отделки</h2>
