--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Transform</title>
+	<title>Контакты Трансформ-Плюс г.Краснодар</title>
 	//= template/head.html
 </head>
 
