--- a/assets/src/external-finish.html
+++ b/assets/src/external-finish.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Фасадный декор для отделки дома </title>
+	<title>Фасадный декор для отделки дома Трансформ-Плюс Краснодар</title>
 	//= template/head.html
 </head>
 
