--- a/assets/src/internal-finish.html
+++ b/assets/src/internal-finish.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Transform</title>
+	<title>Внутренний декор Трансформ-Плюс Краснодар</title>
 	//= template/head.html
 </head>
 
