--- a/assets/src/examples-of-balustrades.html
+++ b/assets/src/examples-of-balustrades.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Transform</title>
+	<title>Примеры балюстрад Трансформ-Плюс</title>
 	//= template/head.html
 </head>
 <body>
