--- a/assets/src/examples-of-our-artwork.html
+++ b/assets/src/examples-of-our-artwork.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Transform</title>
+	<title>Примеры работы Трансформ-Плюс Краснодар</title>
 	//= template/head.html
 </head>
 <body>
