--- a/assets/src/examples-of-windows.html
+++ b/assets/src/examples-of-windows.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Transform</title>
+	<title>Примеры декора окон Трансформ-Плюс</title>
 	//= template/head.html
 </head>
 
