--- a/assets/src/using-materials.html
+++ b/assets/src/using-materials.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Transform</title>
+	<title>Пенопласт, пенополистерол и гипс Трансформ-Плюс г.Краснодар </title>
 	//= template/head.html
 </head>
 
